# openal-soft-sys

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
examples/openal_info/: main.rs
genbinding/win/: gen.bat
src/: lib.rs
src/alext/: efx_presets.rs
