[package]
name = "openal-soft-sys"
version = "0.1.0"
authors = ["tasogare3710 <tasogare.android@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "openal_info"

[dev-dependencies]
anyhow = { version = "=1.0.32" }
